--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" href="./style/normalize.css">
   <title>CV</title>
@@ -16,7 +19,7 @@
         <nav>
           <ul>
             <li><a href="#сontact">Contact</a></li>
-            <li><a href="#about_me">About me</a></li>
+            <li><a href="#about_me">AboutMe</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#code">Code</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -32,17 +35,19 @@
           <h1>Aleksandra Bulova</h1>
           <img src="./image/photo_me.jpg" alt="photo_Aleksandra">
         </div>
-        <div class="сontact" id="сontact">
+        <div class="сontact">
+          <div class="anchor" id="сontact"></div>
           <h2>Contact information</h2>
           <ul>
-            <li>Location: Minsk, Belarus</li>
-            <li>Phone: +375297685902</li>
-            <li>E-mail: aliksandra.ihnatsenia@gmail.com</li>
-            <li>GitHub: <a href="https://github.com/AleksandraBulova">AleksandraBulova</a></li>
+            <li><p class="contact_data">Location:</p> Minsk, Belarus</li>
+            <li><p class="contact_data">Phone:</p> +375297685902</li>
+            <li><p class="contact_data">E-mail:</p> aliksandra.ihnatsenia@gmail.com</li>
+            <li><p class="contact_data">GitHub:</p> <a href="https://github.com/AleksandraBulova" target="_blank">AleksandraBulova</a></li>
           </ul>
         </div>
       </div>
-      <div class="about_me" id="about_me">
+      <div class="about_me">
+        <div class="anchor" id="about_me"></div>
         <h2>Briefly About Myself</h2>
         <p>I am young, ambitious, used to go to my goal. I can and like to work in a team. 
           Now I want to spend all my strength and energy on training and developing my professional qualities, 
@@ -55,15 +60,18 @@
           in order to feel its flavor and local features, including national cuisine.  
         </p>
       </div>
-      <div class="skills" id="skills"> 
+      <div class="skills"> 
+        <div class="anchor" id="skills"></div>
         <h2>Skills</h2>
         <ul>
-          <li>LHTML5, CSS3</li>
-          <li>JavaScript Basics</li>
-          <li>Figma</li>
+          <li><img src="./image/html-5-logo-svg.svg" alt="html-logo"> HTML</li>
+          <li><img src="./image/css3-logo-svg.svg" alt="css-logo"> CSS</li>
+          <li><img src="./image/javascript-logo.svg" alt="js-logo"> JavaScript Basics</li>
+          <li><img src="./image/figma-logo-svg.svg" alt="figma-logo"> Figma</li>
         </ul>
       </div>
-      <div class="code_example" id="code">
+      <div class="code_example">
+        <div class="anchor" id="code"></div>
         <h2>Code example</h2>
         <p>
           Task CODEWARS: Given an array of integers, Find the minimum sum which is obtained from summing each Two integers product. 
@@ -73,7 +81,7 @@
           function minSum(arr) {
             const copyArr = [...arr].sort((a, b) => (a - b));
             let res = 0;
-            for (let i = 0; i < copyArr.length / 2; i++){
+            for (let i = 0; i &lt; copyArr.length / 2; i++){
               res += copyArr[i] * copyArr[copyArr.length - i - 1];
             }
           
@@ -83,34 +91,63 @@
           minSum({12,6,10,26,3,24})
         </code></pre>
       </div>
-      <div class="experience" id="experience">
+      <div class="experience">
+        <div class="anchor" id="experience"></div>
         <h2>Experience</h2>
-        <p>I started learning *HTML*, *CSS* and *JS* on my own. Here is an example of several projects that I implemented during my training: </p>
+        <p>I started learning HTML, CSS and JS on my own. Here is an example of several projects that I implemented during my training: </p>
         <ul>
-          <li><a href="https://aleksandrabulova.github.io/Portfolio">Portfolio</a></li>
-          <li><a href="https://aleksandrabulova.github.io/singolo">Singolo</a></li>
-          <li><a href="https://aleksandrabulova.github.io/ToDoList">ToDoList</a></li>
-          <li><a href="https://aleksandrabulova.github.io/Pizza">Pizza</a></li>
+          <li>
+            <a href="https://aleksandrabulova.github.io/Portfolio" target="_blank">Portfolio</a>
+            <img src="./image/portfolio.png" alt="portfolio">
+          </li>
+          <li>
+            <a href="https://aleksandrabulova.github.io/singolo" target="_blank">Singolo</a>
+            <img src="./image/singolo.png" alt="singolo">
+          </li>
+          <li>
+            <a href="https://aleksandrabulova.github.io/ToDoList" target="_blank">ToDoList</a>
+            <img src="./image/to-do_list.png" alt="to-do_list">
+          </li>
+          <li>
+            <a href="https://aleksandrabulova.github.io/Pizza" target="_blank">Pizza</a>
+            <img src="./image/pizza.png" alt="pizza">
+          </li>
         </ul>
       </div>
-      <div class="education" id="education">
+      <div class="education">
+        <div class="anchor" id="education"></div>
         <h2>Education</h2>
         <ul>
-          <li>2014-2018: Belarusian State University. Faculty of Mechanics and Mathematics.</li>
+          <li>
+            <div class="education_list">
+              <p> Belarusian State University. Faculty of Mechanics and Mathematics.</p>
+              <img src="./image/BSU.png" alt="BSU">
+            </div>
+          </li>
+          <li>
+            <div class="education_list">
+              <p> HTML Academy</p>
+              <img src="./image/HTML_Academy.jfif" alt="HTML_Academy">
+            </div>
+          </li>
         </ul>
       </div>
-      <div class="languages" id="languages">
+      <div class="languages">
+        <div class="anchor" id="languages"></div>
         <h2>Languages</h2>
-        <ul>
-          <li>English: *Pre-intermediate(A2-)</li>
-        </ul>
+        <div class="english">
+          <ul>
+            <li>English: Pre-intermediate(A2-)</li>
+          </ul>
+          <img src="./image/language.jpg" alt="English">
+        </div>
       </div>
     </main>
     <footer>
       <div class="information">
-        <a href="https://rs.school/js/"><img src="./image/rs_school_js.svg" alt="rs_school_js"></a>
+        <a href="https://rs.school/js/" target="_blank"><img class="rs_school" src="./image/rs_school_js.svg" alt="rs_school_js"></a>
         <p>2022</p>
-        <a href="https://github.com/AleksandraBulova"><img src="./image/GitHub_Logo.png" alt="GitHub_Logo"></a>
+        <a href="https://github.com/AleksandraBulova" target="_blank"><img class="GitHub_Logo" src="./image/GitHub_Logo.png" alt="GitHub_Logo"></a>
       </div>
     </footer>
   </div>
